agrega proyectos al portfolio

--- a/index.html
+++ b/index.html
@@ -202,6 +202,45 @@
             </div>
             <img class="project_img" src="./img/proj_encriptador.png" alt="portada encriptador de texto" width="600">
         </div>
+        <!-- CLAK -->
+        <div class="container__projects-projectbox-left">
+            <img class="project_img" src="./img/proj_clak.png" alt="portada juego número secreto" width="600">
+            <div class="container__projects-projectbox-txt">
+                <p class="headline medium">CLAK!</p>
+                <p class="txt-body medium">
+                    Clak! es un study case de una app móvil. Es el trabajo final integrador que realizamos en equipo para el curso de Diseño UX/UI en CaC. 
+                    <br><br>No dejes de probar el prototipo en Figma!
+                </p>
+                <div class="container__projects-projectbox-btn">
+                    <a href="https://drive.google.com/file/d/1rOauyYJRX4uJU-vz1hH2evomwOnquTkR/view?usp=drive_link" target="_blank"
+                        class="btn__txt btn-hover">Presentación</a>
+                    <a href="https://www.figma.com/proto/npFx5XEyL8TpJZVWibmbqp/Wireframes-UX%2FUI?type=design&node-id=321-2656&t=lEvs5N4ASkXNAdBO-1&scaling=scale-down&page-id=253%3A2247&starting-point-node-id=1987%3A30335&show-proto-sidebar=1" target="_blank"
+                        class="btn__txt-full btn-hover">Demo</a>
+                    <a href="https://www.figma.com/design/aAmTx7vbN0Ie0zANNnOdn2/Wireframes-UX%2FUI-(Copy)?node-id=70-289&t=K0IGLFePK9xKsAWE-1" class="btn__icon-full btn-hover"><i class="icon_download ico-figma"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- PORTFOLIO -->
+        <div class="container__projects-projectbox-right">
+            <div class="container__projects-projectbox-txt">
+                <p class="headline medium">Portfolio</p>
+                <p class="txt-body medium">
+                    Mi portfolio personal es un proyecto realizado para el Challenge ONE de Alura en la Formación Front End 2024.
+                    <br><br>Podés ver el diseño previo en figma
+                </p>
+                <div class="container__projects-projectbox-btn">
+                    <a href="https://github.com/VannDennOk/portfolio-vanina-denegri.git" target="_blank"
+                        class="btn__txt btn-hover">Repositorio</a>
+                    <a href="https://vanndennok.github.io/portfolio-vanina-denegri/" target="_blank"
+                        class="btn__txt-full btn-hover">Demo</a>
+                    <a href="https://www.figma.com/design/cuLTiolsfN1sbfnfVfO29h/Portafolio-Alura?node-id=125911-238&t=mm2aNB8dSkbLUU4E-1"
+                        target="_blank" class="btn__icon-full btn-hover"><i class="icon_download ico-figma"></i>
+                    </a>
+                </div>
+            </div>
+            <img class="project_img" src="./img/proj_portfolio.png" alt="portada encriptador de texto" width="600">
+        </div>
     </section>
 
     <!-- FORMACIÓN / STUDIES -->
@@ -251,7 +290,7 @@
             <div class="container__studies-study">
                 <img class="studies_img" src="./img/logo_AHPF.png" alt=" Logo agencia de Habilidades" width="80">
                 <div class="container__studies-study-txt">
-                    <p class="headline medium">Diseño UX/UI</p>
+                    <p class="headline medium">Diseño UX/UI - CaC</p>
                     <p class="txt-body medium">
                         2023 - Agencia de habilidades para el futuro, Min. Ed. CABA
                     </p>
