Actualiza CV Descargable

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="https://github.com/VannDennOk" target="_blank" class="btn__icon-full btn-hover"><i
                             class="icon ico-github"></i></a>
                 </div>
-                <a href="./docs/CV - Denegri Vanina.pdf" download="CV - Denegri Vanina.pdf"
+                <a href="./docs/CV-DenegriVanina-oct24.pdf" download="CV-DenegriVanina-oct24.pdf"
                     class="btn__txt btn-hover">Descargar CV</a>
             </div>
         </div>
